[B] Hide mobile nav when main header is invisible and not sticky - Also prevents mobile nav from hiding if the user scrolls whie menu is open - Also also allows user to scroll mobile menu if menu is taller than window height - Resolves #12

--- a/components/global/Header/_header.scss
+++ b/components/global/Header/_header.scss
@@ -23,6 +23,7 @@ $_breakpoint: functions.header(layout-breakpoint);
   background-color: functions.palette(turquoise60);
   transform: none;
   transition: transform 0.4s;
+  overflow-x: hidden;
 
   &.invisible {
     transform: translate3d(0, -100%, 0);
